--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/AdminPage.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/AdminPage.html
@@ -40,6 +40,10 @@
 		<p>There isn't any highlighted product today.</p>
 	</div>
 	<br> 
+	
+	<div>
+		<a id="AdminLink" th:href="@{/InsertNewProduct}">Insert a new Product</a>
+	</div>	
 	<div>
 		<a id="AdminLink" th:href="@{/CreateQuestionnaire}">Create a new questionnaire.</a>
 	</div>	
