--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/SelectOldProduct.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/SelectOldProduct.html
@@ -65,7 +65,7 @@ button[type="submit"]:hover {
 					<span th:text="'Insert question number ' + ${n} + ':'"></span>
 				</div>
 				<div class="row">
-					<input type="text" name="Questions" required="required">
+					<input type="text" name="Questions" required="required" maxlength="200">
 				</div>
 			</div>
 			<br>
