--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/.html
@@ -22,7 +22,7 @@ button[type="submit"]:hover {
 	background-color: #555 !important;
 }
 </style>
-<title>ProductOfTheDayInsertion</title><link rel="stylesheet" type="text/css" media="all"
+<title>Create Questionnaire</title><link rel="stylesheet" type="text/css" media="all"
 	href="../CSS/mystyle.css" th:href="@{/css/mystyle.css}" />
 </head>
 
