--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/CreateQuestionnaire.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/CreateQuestionnaire.html
@@ -4,7 +4,7 @@
 
 <head>
 <meta charset="ISO-8859-1">
-<title>ProductOfTheDayInsertion</title>
+<title>Create questionnaire</title>
 <style>
 button[type="submit"] {
   background-color: #989898 !important;
