--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/InsertNewProduct.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/InsertNewProduct.html
@@ -22,7 +22,7 @@ button[type="submit"]:hover {
 	background-color: #555 !important;
 }
 </style>
-<title>ProductOfTheDayInsertion</title><link rel="stylesheet" type="text/css" media="all"
+<title>Insert new product</title><link rel="stylesheet" type="text/css" media="all"
 	href="../CSS/mystyle.css" th:href="@{/css/mystyle.css}" />
 </head>
 
@@ -38,7 +38,7 @@ button[type="submit"]:hover {
 		<br>
 		<br>
 				
-		<form action="#" th:action="@{/SendQuestionnaireNewProduct}" method="POST" enctype="multipart/form-data">	
+		<form action="#" th:action="@{/SendNewProductData}" method="POST" enctype="multipart/form-data">	
 		<fieldset>
 			<div class="row">
 					<span>Insert the name of the product</span>
