--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/AnswerQuestionnaire.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/AnswerQuestionnaire.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Answer Questionnaire</title>
+<title>Questionnaire</title>
 <style>
 input[type=text],[type=password]{
 	width: 25%;
