--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/PastResults.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/PastResults.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Home</title>
+<title>Past results</title>
 <link rel="stylesheet" type="text/css" media="all"
 	href="../CSS/mystyle.css" th:href="@{/css/mystyle.css}" />
 </head>
