Fix align for missing reviews text

--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/Home.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/Home.html
@@ -58,7 +58,7 @@
 				</div>
 			</div>
 		</div>
-		<h2 th:if="${reviews == null and product != null}">This product doesn't have any review.</h2>
+		<h2 align= "center" th:if="${reviews == null and product != null}">This product doesn't have any review.</h2>
 	
 		<div align="center" th:if="${product != null}">
 			<div style="margin-top: 2%" th:if= "${status == null}">
