--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/AdminPage.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/AdminPage.html
@@ -43,7 +43,7 @@
 	<br> 
 	
 	<div align="center">
-		<a id="AdminLink" th:href="@{/InsertNewProduct}">Insert a new Product</a>
+		<a id="AdminLink" th:href="@{/InsertNewProduct}">Insert a new Product.</a>
 	</div >	
 	<div align="center">
 		<a id="AdminLink" th:href="@{/CreateQuestionnaire}">Create a new questionnaire.</a>
