--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/InsertNewProduct.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/InsertNewProduct.html
@@ -28,6 +28,12 @@ button[type="submit"]:hover {
 
 
 <body>
+	<div align="right">
+		<a id="Links" th:href="@{/Leaderboard}">Leaderboard</a>
+	</div>
+	<div align="right">
+		<a id="Links" th:href="@{/Logout}">Logout</a>
+	</div>
 		
 	<div align="center">
 	
