Modify text on Homepage link

--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/CreateQuestionnaire.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/CreateQuestionnaire.html
@@ -26,7 +26,7 @@ button[type="submit"]:hover {
 <body>
 
 	<div id="Links" align="right">
-		<a th:href="@{/AdminPage}">Homepage</a>
+		<a th:href="@{/AdminPage}">Go back to Admin Page</a>
 	</div>
 	<div id="Links" align="right">
 		<a th:href="@{/Logout}">Logout</a>
