--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/InsertNewProduct.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/InsertNewProduct.html
@@ -28,8 +28,8 @@ button[type="submit"]:hover {
 
 
 <body>
-	<div align="right">
-		<a id="Links" th:href="@{/Leaderboard}">Leaderboard</a>
+	<div id="Links" align="right">
+		<a th:href="@{/AdminPage}">Go back to Admin Page</a>
 	</div>
 	<div align="right">
 		<a id="Links" th:href="@{/Logout}">Logout</a>
